# bpg4android

./: README.md  build.gradle  settings.gradle
Decoder/: build.gradle
Decoder/src/main/cpp/: BpgDecoderJni.cpp  CMakeLists.txt  log.h
Decoder/src/main/cpp/decoder/: decoder.cpp  decoder.h  utils.cpp  utils.h
Decoder/src/main/cpp/libbpg/: CMakeLists.txt
app/: build.gradle  keystore.jks  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/bpgdecoder/app/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
